julia, bugfixes and squashed commits

--- a/app.less
+++ b/app.less
@@ -1,3 +1,21 @@
+/* latin-ext */
+@font-face {
+  font-family: 'Monda';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Monda Regular'), local('Monda-Regular'), url(vendor/Monda-Regular.ttf);
+}
+/* latin */
+@font-face {
+  font-family: 'Monda';
+  font-style: bold;
+  font-weight: 700;
+  src: local('Monda Bold'), local('Monda-Bold'), url(vendor/Monda-Bold.ttf);
+}
+
+.treed_body_rendered {
+  font-family: 'Monda';
+}
 
 .Header {
   display: flex;
@@ -164,5 +182,9 @@
     text-align: center;
     margin-top: 15px;
   }
+}
+
+.list_item {
+  font-family: 'Monda', sans-serif;
 }
 
